--- a/Dogovor/Dogovor.csproj
+++ b/Dogovor/Dogovor.csproj
@@ -80,9 +80,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Design\DesignDataService.cs" />
+    <Compile Include="Model\Branch.cs" />
     <Compile Include="Model\DataItem.cs" />
     <Compile Include="Model\DataService.cs" />
+    <Compile Include="Model\Contract.cs" />
     <Compile Include="Model\IDataService.cs" />
+    <Compile Include="Model\Signatory.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="MainWindow.xaml">
